<resources>
    <string name="app_name">Asistencia Medica</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="telefono">Teléfono</string>
    <string name="dni">DNI</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="repita_contrasena">Repita contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email</string>
    <string name="registrarme">Registrarme</string>
    <string name="registracion">Registración</string>
    <string name="inicio">Inicio</string>
    <string name="recetas">Recetas</string>
    <string name="historial">Historial</string>
    <string name="estudios">Estudios</string>
    <string name="turnos">Turnos</string>
    <string name="turno">Turno</string>
    <string name="proximos_turnos">Próximos turnos</string>
    <string name="ultimos_estudios">Últimos estudios</string>
    <string name="ultimas_historias">Últimas historias</string>
    <string name="paciente">Paciente</string>
    <string name="profesional">Profesional</string>
    <string name="especialidad">Especialidad</string>
    <string name="fecha">Fecha</string>
    <string name="estudio">Estudio</string>
    <string name="resultado">Resultado</string>
    <string name="receta">Receta</string>
    <string name="historia">Historia</string>

    <string name="hora_ini">Hora inicial a generar</string>
    <string name="hora_fin">Hora final a generar</string>
    <string name="duracion_turno">Duración de cada turno en minutos</string>
    <string name="separacion_turnos">Separación entre turnos en minutos</string>
    <string name="submit_turnos">Confirmar Generación</string>

    <string name="doctor">Doctor</string>

    <string name="idturno">Turno #</string>
    <string name="anadir_info">Añadir información</string>
    <string name="cerrar_turno">Cerrar turno</string>
    <string name="info_paciente">Información del paciente</string>
    <string name="edad">Edad</string>
    <string name="ver_estudios">Ver estudios</string>
    <string name="ver_historial">Ver historial</string>


    <string name="username_invalido">Ingrese un email valido</string>
    <string name="password_invalido">Ingrese una contraseña</string>
    <string name="password_no_coincide">Las contraseñas no coinciden</string>
    <string name="nombre_invalido">Ingrese un nombre válido</string>
    <string name="apellido_invalido">Ingrese un apellido válido</string>
    <string name="dni_invalido">Ingrese un DNI válido</string>
    <string name="telefono_invalido">Ingrese un teléfono válido</string>

    <string name="clinica_medica">Clínica Médica</string>
    <string name="oftalmologia">Oftalmología</string>
    <string name="cardiologia">Cardiología</string>
    <string name="hematologia">Hematología</string>
    <string name="ginecologia">Ginecología</string>
    <string name="kinesiologia">Kinesiología</string>
    <string name="selec_especialidad">Seleccionar Especialidad</string>
    <string name="turnos_disp">Turnos Disponibles</string>
    <string name="nuevo_turno">Nuevo Turno</string>
    <string name="turno_asignado">Turno Asignado</string>
    <string name="horario">Horario</string>
    <string name="doctora">Doctor/a</string>
    <string name="ubicacion">Ubicación</string>
    <string name="btn_solicitar"> Solicitar </string>
    <string name="mis_turnos">Mis Turnos</string>

    <string name="proximos_pacientes">Próximos pacientes</string>
    <string name="ir_pacientes">Ver todos los pacientes</string>
    <string name="info_turnos">Información de los turnos</string>
    <string name="turnos_disponibles">Turnos disponibles: </string>
    <string name="turnos_reservados">Turnos reservados: </string>
    <string name="ultimo_turno_disponible">Último turno disponible: </string>
    <string name="ultimo_turno_reservado">Último turno reservado: </string>

    <string name="guardando">Guardando…</string>
    <string name="ingresando">Ingresando…</string>
    <string name="usuario_existente">Ya existe un usuario con ese email</string>
    <string name="usuario_no_existente">Email o contraseña invalido(s)</string>
    <string name="emitir_receta">Emitir Receta</string>

    <string name="fecha_formato">Fecha (DD/MM/AAAA)</string>
    <string name="validacion_paciente">Seleccione un paciente</string>
    <string name="validacion_fecha">Ingrese una fecha válida</string>
    <string name="validacion_receta">Ingrese una receta</string>
    <string name="subir_resultado">Subir Resultado</string>
    <string name="validacion_resultado">Ingrese un resultado</string>
    <string name="validacion_estudio">Ingrese un estudio</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar Turno</string>
    <string name="salir">Salir</string>
    <string name="adjuntar">Adjuntar</string>
    <string name="validacion_descripcion">Ingrese una descripción</string>
    <string name="download_failure">Ocurrió un error en la descarga</string>
    <string name="application_not_found">No hay ninguna aplicación disponible para ver la imagen</string>
    <string name="loading">Cargando……</string>
</resources>