<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.tp3.asistenciamedica.ui.inicio.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_recetas"
        android:name="com.tp3.asistenciamedica.ui.recetas.RecetasFragment"
        android:label="@string/recetas"
        tools:layout="@layout/fragment_recetas" />

    <fragment
        android:id="@+id/navigation_historial"
        android:name="com.tp3.asistenciamedica.ui.historial.HistorialFragment"
        android:label="@string/historial"
        tools:layout="@layout/fragment_historial" />
    <fragment
        android:id="@+id/navigation_estudios"
        android:name="com.tp3.asistenciamedica.ui.estudios.EstudiosFragment"
        android:label="@string/estudios"
        tools:layout="@layout/fragment_estudios" />
    <fragment
        android:id="@+id/navigation_turnos"
        android:name="com.tp3.asistenciamedica.ui.turnos.TurnosFragment"
        android:label="@string/turnos"
        tools:layout="@layout/fragment_recetas" />
</navigation>