<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.tp3.asistenciamedica.ui.inicio.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_recetas"
        android:name="com.tp3.asistenciamedica.ui.recetas.RecetasFragment"
        android:label="@string/recetas"
        tools:layout="@layout/fragment_recetas">
        <action
            android:id="@+id/action_recetas_to_receta"
            app:destination="@id/recetaFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_historial"
        android:name="com.tp3.asistenciamedica.ui.turnos.HistorialFragment"
        android:label="@string/historial"
        tools:layout="@layout/fragment_historial">
        <action
            android:id="@+id/action_historial_to_turno"
            app:destination="@id/turnoFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_estudios"
        android:name="com.tp3.asistenciamedica.ui.estudios.EstudiosFragment"
        android:label="@string/estudios"
        tools:layout="@layout/fragment_estudios">
        <action
            android:id="@+id/action_estudios_to_estudio"
            app:destination="@id/estudioFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_turnos"
        android:name="com.tp3.asistenciamedica.ui.turnos.TurnosFragment"
        android:label="@string/turnos"
        tools:layout="@layout/fragment_recetas">
        <action
            android:id="@+id/action_turnos_to_turno"
            app:destination="@id/turnoFragment" />
    </fragment>
    <fragment
        android:id="@+id/estudioFragment"
        android:name="com.tp3.asistenciamedica.ui.estudios.EstudioFragment"
        android:label="@string/estudio"
        tools:layout="@layout/estudio_fragment" >
        <argument
            android:name="estudioId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/recetaFragment"
        android:name="com.tp3.asistenciamedica.ui.recetas.RecetaFragment"
        android:label="@string/receta"
        tools:layout="@layout/receta_fragment" >
        <argument
            android:name="recetaId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/turnoFragment"
        android:name="com.tp3.asistenciamedica.ui.turnos.TurnoFragment"
        android:label="Turno"
        tools:layout="@layout/turno_fragment" >
        <argument
            android:name="turnoId"
            app:argType="string" />
    </fragment>
</navigation>