<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="340dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=': "                        "'
        android:textSize="20dp"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="340dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctora"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=': "       "'
        android:textSize="20dp"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especialidad"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=': "               "'
        android:textSize="20dp"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=": **"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="173dp"
        android:text="@string/nuevo_turno"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="130dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_solicitar"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="629dp" />
</androidx.constraintlayout.widget.ConstraintLayout>